VPC_3public_sabnet_elb_secgroup_inst_autosc.yml
Description:  FinalProjectItea
   
      
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: itea-home
        
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.nano
      
  EnvironmentName:
   Type: String

  VpcCIDR:
    Description: IP range for this VPC
    Type: String
    Default: 10.0.0.0/16
   
  PublicSubnet1CIDR:
    Description: IP range for the public subnet in the first AZ
    Type: String
    Default: 10.0.1.0/24

  PublicSubnet2CIDR:
    Description: IP range for the public subnet in the second AZ
    Type: String
    Default: 10.0.2.0/24
    
  PublicSubnet3CIDR:
    Description: IP range for the public subnet in the second AZ
    Type: String
    Default: 10.0.3.0/24
  
  AutoScalingGroup:
   Type: AWS::AutoScaling::AutoScalingGroup
   Properties:
    AvailabilityZones: !GetAZs ''
    LaunchConfigurationName: !Ref AutoScalingLaunch
    MinSize: '1'
    MaxSize: '3'
    LoadBalancerNames: !Ref ElasticLoadBalancer
    
  AutoScalingLaunch:
   Type: AWS::AutoScaling::LaunchConfiguration
   Properties:
    ImageId: ami-050b8344d77081f4b
    SecurityGroups: !Ref InstanceSecurityGroup
    InstanceType: t2.nano
    BlockDeviceMappings:
    - DeviceName: "/dev/sdk"
      Ebs:
        VolumeSize: '8'  
        
Resources:   
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet3CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ3)
  
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3
   
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      SecurityGroups: !Ref InstanceSecurityGroup
      KeyName: !Ref KeyName
      ImageId: ami-050b8344d77081f4b
      SubnetId: !Ref VpcCIDR
      
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access and HTTP from the load balancer only
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: !Ref VpcCIDR
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      AvailabilityZones: !GetAZs ''
      CrossZone: true
      Listeners:
      - LoadBalancerPort: '80'
        InstancePort: '80'
        Protocol: HTTP        
        
Outputs:
  VPC:
    Description: created VPC
    Value: !Ref VPC

  PublicSubnets:
    Description: list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2, !Ref PublicSubnet2 ]]
  
  PublicSubnet1:
    Description: public subnet in the 1 AZ
    Value: !Ref PublicSubnet1

  PublicSubnet2:
    Description: public subnet in the 2 AZ
    Value: !Ref PublicSubnet2

  PublicSubnet3:
    Description: public subnet in the 3 AZ
    Value: !Ref PublicSubnet3
  
  InstanceSecurityGroup:
    Description: Security group rule
    Value: !Ref InstanceSecurityGroup
